<resources>
    <string name="app_name">LipArt</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on">Front</string>
    <string name="toggle_turn_off">Back</string>
    <string name="desc_camera_source_activity">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity">Vision detectors demo with a still image</string>
    <string name="desc_image_convert_activity">Image format conversions testing Activity</string>
    <string name="desc_sdk_doctor_activity">SDK Doctor testing Activity</string>
    <string name="desc_model_download_activity">Custom Model Download testing Activity</string>
    <string name="download_error">Download error</string>
    <string name="start_over">Start over</string>
    <string name="menu_item_settings">Settings</string>

    <!-- Settings related strings. -->
    <string name="pref_screen_title_live_preview">Live preview settings</string>
    <string name="pref_screen_title_still_image">Still image settings</string>
    <string name="pref_category_face_detection">Face detection</string>
    <string name="pref_category_object_detection">Object detection</string>
    <string name="pref_category_automl">AutoML Image Labeling</string>

    <!-- Strings for camera settings. -->
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size">Front camera preview size</string>
    <string name="pref_title_camera_live_viewport">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport">Do not block camera preview drawing on detection</string>

    <!-- Strings for object detector enable multiple objects preference. -->
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>

    <!-- Strings for object detector enable classification preference. -->
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>

    <!-- Strings for face detector landmark mode preference. -->
    <string name="pref_title_face_detector_landmark_mode">Landmark mode</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode" translatable="false">lpfdlm</string>
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks">No landmarks</string>
    <string name="pref_entries_face_detector_landmark_mode_all_landmarks">All landmarks</string>
    <!-- The following entry values must match the ones in FirebaseVisionFaceDetectorOptions#LandmarkMode -->
    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_landmark_mode_all_landmarks" translatable="false">2</string>

    <!-- Strings for face detector contour mode preference. -->
    <string name="pref_title_face_detector_contour_mode">Contour mode</string>
    <string name="pref_key_live_preview_face_detection_contour_mode" translatable="false">lpfdcm</string>
    <string name="pref_entries_face_detector_contour_mode_no_contours">No contours</string>
    <string name="pref_entries_face_detector_contour_mode_all_contours">All contours</string>
    <!-- The following entry values must match the ones in FirebaseVisionFaceDetectorOptions#ContourMode -->
    <string name="pref_entry_values_face_detector_contour_mode_no_contours" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours" translatable="false">2</string>

    <!-- Strings for face detector classification mode preference. -->
    <string name="pref_title_face_detector_classification_mode">Classification mode</string>
    <string name="pref_key_live_preview_face_detection_classification_mode" translatable="false">lpfdcfm</string>
    <string name="pref_entries_face_detector_classification_mode_no_classifications">No classifications</string>
    <string name="pref_entries_face_detector_classification_mode_all_classifications">All classifications</string>
    <!-- The following entry values must match the ones in FirebaseVisionFaceDetectorOptions#ClassificationMode -->
    <string name="pref_entry_values_face_detector_classification_mode_no_classifications" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_classification_mode_all_classifications" translatable="false">2</string>

    <!-- Strings for face detector performance mode preference. -->
    <string name="pref_title_face_detector_performance_mode">Performance mode</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="pref_entries_face_detector_performance_mode_fast">Fast</string>
    <string name="pref_entries_face_detector_performance_mode_accurate">Accurate</string>
    <!-- The following entry values must match the ones in FirebaseVisionFaceDetectorOptions#PerformanceMode -->
    <string name="pref_entry_values_face_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_performance_mode_accurate" translatable="false">2</string>

    <!-- Strings for face detector face tracking preference. -->
    <string name="pref_title_face_detector_face_tracking">Face tracking</string>
    <string name="pref_key_live_preview_face_detection_face_tracking" translatable="false">lpfdft</string>

    <!-- Strings for face detector min face size preference. -->
    <string name="pref_title_face_detector_min_face_size">Minimum face size</string>
    <string name="pref_key_live_preview_face_detection_min_face_size" translatable="false">lpfdmfs</string>
    <string name="pref_dialog_message_face_detector_min_face_size">Proportion of the head width to the image width, and the valid value range is [0.0, 1.0]</string>
    <string name="pref_toast_invalid_min_face_size">Minimum face size must be a float value and in the range [0.0, 1.0]</string>
    <string name="take_photo">Take photo</string>
    <string name="todo">TODO</string>

    <string name="title_home">Home</string>
    <string name="title_circle">Circle</string>
    <string name="title_profile">Profile</string>
    <string name="title_buy">Buy</string>
    <string name="title_snap">Try</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="enter">Enter LipArt</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>

    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="title_activity_buy">BuyActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="picked_color_guide">Select color area on the image</string>
    <string name="save_color">Save Color</string>
    <string name="share">share</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="tutorial">Tutorial</string>

</resources>
