<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/firebase_lockup_400" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out" />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Firebase User ID: 123456789abc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/enterButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:layout_marginStart="@dimen/button_horizontal_margin"
            android:layout_marginEnd="@dimen/button_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grey_300"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/emailPasswordFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/fieldEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/fieldPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailPasswordButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailPasswordFields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/emailSignInButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/emailCreateAccountButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_account" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signedInButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="2.0">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signOutButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/verifyEmailButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/verify_email" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>