<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fireTopLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:keepScreenOn="true">


  <ImageView
      android:id="@+id/previewPane"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:scaleType="fitStart"
      android:contentDescription="@string/todo">
  </ImageView>


    <com.mobile.lipart.common.GraphicOverlay
        android:id="@+id/previewOverlay"
        android:layout_width="match_parent"
        android:layout_height="587dp"
        android:layout_above="@+id/controlPanel2"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="8dp" />

    <FrameLayout
        android:id="@+id/controlPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:background="#000">

        <Button
            android:id="@+id/getImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/take_photo" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/save_color" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/controlPanel2"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="55dp"
        android:alpha="1.0">

        <ImageView
            android:id="@+id/colorCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="TODO"
            android:src="@drawable/circle1" />

    </FrameLayout>

</RelativeLayout>
